k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: doable1-svc
  namespace: doable1
spec:
  selector:
    app: doable1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
